--- a/render.yaml
+++ b/render.yaml
@@ -4,16 +4,7 @@ services:
     env: node
     plan: free
 
-    buildCommand: >
-      cd backBien && npm install &&
-      cd ../frontFarm && npm install &&
-      npm run build -- --configuration production &&
-      echo "===== Contenido de dist =====" &&
-      ls -R dist &&
-      mkdir -p ../backBien/public &&
-      cp -r dist/front-farm/* ../backBien/public/ &&
-      echo "===== Contenido final en backBien/public =====" &&
-      ls -R ../backBien/public
+    buildCommand: npm run build
 
     startCommand: node backBien/server.js
 
