Fix: Copia dist Angular a backBien/public con Node.js

--- a/package.json
+++ b/package.json
@@ -3,6 +3,6 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "build": "cd backBien && npm install && cd ../frontFarm && npm install && npm run build -- --configuration production && mkdir -p ../backBien/public && cp -r dist/front-farm/* ../backBien/public/"
+    "build": "cd backBien && npm install && cd ../frontFarm && npm install && npm run build -- --configuration production && node ../copy-dist.js"
   }
 }
