--- a/frontFarm/angular.json
+++ b/frontFarm/angular.json
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "dist/front-farm",
+            "outputPath": "../backBien/public",
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": [
