--- a/render.yaml
+++ b/render.yaml
@@ -15,11 +15,18 @@ services:
 
     startCommand: node backBien/server.js
 
+    disk:
+      name: uploads
+      mountPath: /opt/render/project/src/uploads
+      sizeGB: 20
+
     envVars:
       - key: NODE_VERSION
         value: 18
       - key: PORT
         value: 5000
+      - key: NODE_ENV
+        value: production
       - key: MONGODB_URI
         sync: false
 
