--- a/frontFarm/angular.json
+++ b/frontFarm/angular.json
@@ -16,9 +16,7 @@
             "outputPath": "../backBien/public",
             "index": "src/index.html",
             "browser": "src/main.ts",
-            "polyfills": [
-              "zone.js"
-            ],
+            "polyfills": ["zone.js"],
             "tsConfig": "tsconfig.app.json",
             "assets": [
               "src/assets",
