--- a/frontFarm/package.json
+++ b/frontFarm/package.json
@@ -23,8 +23,10 @@
     "@fortawesome/angular-fontawesome": "^1.0.0",
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "apexcharts": "^3.45.2",
     "bootstrap": "^5.3.3",
     "jsbarcode": "^3.12.1",
+    "ng-apexcharts": "^1.8.0",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.16.0",
     "tslib": "^2.3.0",
