--- a/frontFarm/package.json
+++ b/frontFarm/package.json
@@ -25,6 +25,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "apexcharts": "^3.45.2",
     "bootstrap": "^5.3.3",
+    "file-saver": "^2.0.5",
     "jsbarcode": "^3.12.1",
     "ng-apexcharts": "^1.8.0",
     "rxjs": "~7.8.0",
@@ -37,6 +38,7 @@
     "@angular-devkit/build-angular": "^19.1.6",
     "@angular/cli": "^19.1.6",
     "@angular/compiler-cli": "^19.1.0",
+    "@types/file-saver": "^2.0.7",
     "@types/jasmine": "~5.1.0",
     "autoprefixer": "^10.4.21",
     "jasmine-core": "~5.5.0",
